--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -2,14 +2,17 @@
 <div class="bg-img">
   <div class="content">
     <header>Вход в платформу</header>
-    <form  #f="ngForm" (ngSubmit)="onSubmit(f)">
+    <form  (ngSubmit)="login()" [formGroup]="loginForm">
       <div class="field">
         <span class="fa fa-user"></span>
-        <input id="login" type="text" [(ngModel)]="user.login" name="login" required placeholder="Имя пользователя">
+        <input id="username" type="username" name="username" formControlName="username" required placeholder="Имя пользователя">
+        <div *ngIf="loginForm.controls['username'].hasError('required')" class="error-message"></div>
       </div>
       <div class="field space">
         <span class="fa fa-lock"></span>
-        <input id="password" type="password" [(ngModel)]="user.password" name="password" required placeholder="Пароль">
+        <input id="password" type="password"  name="password" formControlName="password" required placeholder="Пароль">
+        <div *ngIf="loginForm.controls['password'].hasError('required')" class="error-message"></div>
+
       </div>
       <div class="field space">
         <input type="submit" value="Войти в систему">
