--- a/src/app/components/security/login-page/login-page.component.scss
+++ b/src/app/components/security/login-page/login-page.component.scss
@@ -6,7 +6,7 @@
 	user-select: none;
 }
 .bg-img {
-	background: url('../../../assets/images/bg.jpg');
+	background: url('../../../../assets/images/bg.jpg');
 	height: 100vh;
 	background-size: cover;
 	background-position: center;
